sfdx-source/packaged/main/core/objects/Resource__c/fields/DailyRate__c.field-meta.xml
<CustomField>
    <fullName>DailyRate__c</fullName>
    <label>Daily Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>