sfdx-source/packaged/main/core/objects/Resource__c/fields/DayEndTime__c.field-meta.xml
<CustomField>
    <fullName>DayEndTime__c</fullName>
    <description>Regular end time of work day. Used to calculate occupation and utilization.</description>
    <inlineHelpText>Enter regular end time of work day</inlineHelpText>
    <label>Day End Time</label>
    <type>Time</type>
</CustomField>