sfdx-source/packaged/main/core/objects/Resource__c/fields/DayStartTime__c.field-meta.xml
<CustomField>
    <fullName>DayStartTime__c</fullName>
    <description>Regular start time of work day. Used to calculate occupation and utilization.</description>
    <inlineHelpText>Enter regular end time of work day</inlineHelpText>
    <label>Day Start Time</label>
    <type>Time</type>
</CustomField>