sfdx-source/packaged/main/core/objects/Resource__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Calculated duration of a work day in decimal hour format (3 hours 30 minutes = 3,5)</description>
    <formula>(HOUR(DayEndTime__c) - HOUR(DayStartTime__c)) + (MINUTE(DayEndTime__c)-MINUTE(DayStartTime__c)) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated duration for a regular work day</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>