sfdx-source/packaged/main/core/objects/Resource__c/fields/HourlyRate__c.field-meta.xml
<CustomField>
    <fullName>HourlyRate__c</fullName>
    <formula>DailyRate__c / HoursPerDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>