sfdx-source/packaged/main/core/objects/Resource__c/fields/HoursPerDay__c.field-meta.xml
<CustomField>
    <fullName>HoursPerDay__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Hours per Day</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>